--- a/package.json
+++ b/package.json
@@ -1,44 +1,62 @@
 {
-  "name": "thoiryPhotos",
-  "author": "Sahbi KTIFA",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "2.1.1",
-    "@angular/compiler": "2.1.1",
-    "@angular/compiler-cli": "2.1.1",
-    "@angular/core": "2.1.1",
-    "@angular/forms": "2.1.1",
-    "@angular/http": "2.1.1",
-    "@angular/platform-browser": "2.1.1",
-    "@angular/platform-browser-dynamic": "2.1.1",
-    "@angular/platform-server": "2.1.1",
-    "@ionic/storage": "^1.1.6",
-    "exif-js": "^2.1.1",
-    "ionic-angular": "2.0.0-rc.3",
-    "ionic-native": "2.2.3",
-    "ionicons": "3.0.0",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "^2.0.2",
-    "@ionic/cli-plugin-ionic-angular": "1.3.2",
-    "typescript": "2.0.6"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-whitelist",
-    "cordova-plugin-console",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen"
-  ],
-  "cordovaPlatforms": [
-    "android"
-  ],
-  "description": "ThoiryPhotosClient: An Ionic project"
+    "name": "thoiryPhotos",
+    "author": "Sahbi KTIFA",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "dependencies": {
+        "@angular/common": "2.1.1",
+        "@angular/compiler": "2.1.1",
+        "@angular/compiler-cli": "2.1.1",
+        "@angular/core": "2.1.1",
+        "@angular/forms": "2.1.1",
+        "@angular/http": "2.1.1",
+        "@angular/platform-browser": "2.1.1",
+        "@angular/platform-browser-dynamic": "2.1.1",
+        "@angular/platform-server": "2.1.1",
+        "@ionic/storage": "^1.1.6",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-sqlite-storage": "^2.0.4",
+        "exif-js": "^2.1.1",
+        "ionic-angular": "2.0.0-rc.3",
+        "ionic-native": "2.2.3",
+        "ionicons": "3.0.0",
+        "rxjs": "5.0.0-beta.12",
+        "zone.js": "0.6.26"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "^2.0.2",
+        "@ionic/cli-plugin-cordova": "1.4.1",
+        "@ionic/cli-plugin-ionic-angular": "1.3.2",
+        "typescript": "2.0.6"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-console",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen"
+    ],
+    "cordovaPlatforms": [
+        "android"
+    ],
+    "description": "ThoiryPhotosClient: An Ionic project",
+    "cordova": {
+        "platforms": [
+            "android"
+        ],
+        "plugins": {
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-camera": {}
+        }
+    }
 }
