--- a/package.json
+++ b/package.json
@@ -21,20 +21,25 @@
         "cordova-android": "^6.2.3",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-file": "^4.0.0",
+        "cordova-plugin-file-transfer": "^1.6.3",
+        "cordova-plugin-filepath": "^1.0.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-whitelist": "^1.3.2",
         "cordova-sqlite-storage": "^2.0.4",
-        "exif-js": "^2.1.1",
+        "exif-js": "^2.2.1",
         "ionic-angular": "2.0.0-rc.3",
-        "ionic-native": "2.2.3",
+        "ionic-native": "2.9.0",
         "ionicons": "3.0.0",
         "rxjs": "5.0.0-beta.12",
+        "whatwg-fetch": "^2.0.3",
         "zone.js": "0.6.26"
     },
     "devDependencies": {
         "@ionic/app-scripts": "^2.0.2",
-        "@ionic/cli-plugin-cordova": "1.4.1",
-        "@ionic/cli-plugin-ionic-angular": "1.3.2",
+        "@ionic/cli-plugin-cordova": "1.6.2",
+        "@ionic/cli-plugin-ionic-angular": "1.4.1",
+        "ionic": "3.7.0",
         "typescript": "2.0.6"
     },
     "cordovaPlugins": [
@@ -56,7 +61,9 @@
             "cordova-sqlite-storage": {},
             "cordova-plugin-whitelist": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-camera": {}
+            "cordova-plugin-camera": {},
+            "cordova-plugin-file-transfer": {},
+            "cordova-plugin-filepath": {}
         }
     }
 }
