--- a/package.json
+++ b/package.json
@@ -1,46 +1,45 @@
 {
     "name": "thoiryPhotos",
     "author": "Sahbi KTIFA",
-    "homepage": "http://ionicframework.com/",
+    "homepage": "https://github.com/sahbi-ktifa/ThoiryPhotosApp",
     "private": true,
     "scripts": {
         "ionic:build": "ionic-app-scripts build",
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "2.1.1",
-        "@angular/compiler": "2.1.1",
-        "@angular/compiler-cli": "2.1.1",
-        "@angular/core": "2.1.1",
-        "@angular/forms": "2.1.1",
-        "@angular/http": "2.1.1",
-        "@angular/platform-browser": "2.1.1",
-        "@angular/platform-browser-dynamic": "2.1.1",
-        "@angular/platform-server": "2.1.1",
-        "@ionic/storage": "^1.1.6",
-        "cordova-android": "^6.2.3",
-        "cordova-plugin-camera": "^2.4.1",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-file": "^4.0.0",
-        "cordova-plugin-file-transfer": "^1.6.3",
-        "cordova-plugin-filepath": "^1.0.2",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-whitelist": "^1.3.2",
-        "cordova-sqlite-storage": "^2.0.4",
-        "exif-js": "^2.2.1",
-        "ionic-angular": "2.0.0-rc.3",
+        "@angular/common": "2.4.8",
+        "@angular/compiler": "2.4.8",
+        "@angular/compiler-cli": "2.4.8",
+        "@angular/core": "2.4.8",
+        "@angular/forms": "2.4.8",
+        "@angular/http": "2.4.8",
+        "@angular/platform-browser": "2.4.8",
+        "@angular/platform-browser-dynamic": "2.4.8",
+        "@angular/platform-server": "2.4.8",
+        "@ionic/storage": "1.1.6",
+        "cordova-android": "6.2.3",
+        "cordova-plugin-camera": "2.4.1",
+        "cordova-plugin-compat": "1.1.0",
+        "cordova-plugin-file": "4.0.0",
+        "cordova-plugin-file-transfer": "1.6.3",
+        "cordova-plugin-filepath": "1.0.2",
+        "cordova-plugin-splashscreen": "4.0.3",
+        "cordova-plugin-whitelist": "1.3.2",
+        "cordova-sqlite-storage": "2.0.4",
+        "ionic-angular": "2.3.0",
         "ionic-native": "2.9.0",
         "ionicons": "3.0.0",
-        "rxjs": "5.0.0-beta.12",
-        "whatwg-fetch": "^2.0.3",
-        "zone.js": "0.6.26"
+        "rxjs": "5.0.1",
+        "whatwg-fetch": "2.0.3",
+        "zone.js": "0.7.2"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "^2.0.2",
+        "@ionic/app-scripts": "2.0.2",
         "@ionic/cli-plugin-cordova": "1.6.2",
         "@ionic/cli-plugin-ionic-angular": "1.4.1",
         "ionic": "3.7.0",
-        "typescript": "2.0.6"
+        "typescript": "2.2.0"
     },
     "cordovaPlugins": [
         "cordova-plugin-whitelist",
