--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "cordova-plugin-file-transfer": "1.6.3",
         "cordova-plugin-filepath": "1.0.2",
         "cordova-plugin-splashscreen": "4.0.3",
+        "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "1.3.2",
         "cordova-sqlite-storage": "2.0.4",
         "ionic-angular": "2.3.0",
@@ -36,9 +37,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.0.2",
-        "@ionic/cli-plugin-cordova": "1.6.2",
-        "@ionic/cli-plugin-ionic-angular": "1.4.1",
-        "ionic": "3.7.0",
+        "ionic": "3.9.2",
         "typescript": "2.2.0"
     },
     "cordovaPlugins": [
@@ -62,7 +61,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-camera": {},
             "cordova-plugin-file-transfer": {},
-            "cordova-plugin-filepath": {}
+            "cordova-plugin-filepath": {},
+            "cordova-plugin-statusbar": {}
         }
     }
 }
